group all buttons functionality w/o superscript

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <div class='button-container'>
     <button class='reset'>RESET</button>
-    <button class='first-button'>0</button>
+    <button class='group-button'>GROUP</button>
+    </div>
+    <button class='first-button' data-cell-value='0'>0</button>
     <script src="index.js"></script>
 </body>
 
